--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -2,22 +2,37 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
-    "start": "next start"
+    "dev": "next dev",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/js-yaml": "^4.0.9",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "next": "latest",
-    "next-auth": "5.0.0-beta.25",
+    "js-yaml": "^4.1.0",
+    "lucide-react": "^0.475.0",
+    "next": "^15.1.7",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^19.0.0",
+    "react-confetti": "^6.2.3",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.1"
@@ -27,5 +42,15 @@
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "bcrypt",
+      "sharp"
+    ],
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "sharp"
+    ]
   }
 }
