--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -22,6 +22,8 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
@@ -29,6 +31,7 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-confetti": "^6.2.3",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.4.17",
