--- a/nextjs-dashboard/tsconfig.json
+++ b/nextjs-dashboard/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "es2015"],
+    "types": ["react", "react-dom", "node"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -17,6 +18,10 @@
       {
         "name": "next"
       }
+    ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./app/lib/types"
     ],
     "baseUrl": ".",
     "paths": {
