--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/forms": "^0.5.10",
     "@types/canvas-confetti": "^1.9.0",
     "@types/js-yaml": "^4.0.9",
