feat: configure production build settings and fix dashboard prerendering
- Add dynamic export to dashboard page
- Configure ESLint for production
- Update Next.js build settings
- Document build success and next steps
- Update test organization documentation

Build Status: ✓ Successfully generated 23/23 pages

--- a/nextjs-dashboard/tsconfig.json
+++ b/nextjs-dashboard/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext", "es2015"],
-    "types": ["react", "react-dom", "node"],
+    "types": ["react", "react-dom", "node", "jest"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
