--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -4,7 +4,12 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
@@ -43,12 +48,30 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "@types/supertest": "^6.0.2",
+    "@vercel/postgres": "^0.10.0",
+    "babel-jest": "^29.7.0",
+    "cross-fetch": "^4.1.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7"
+    "eslint-config-next": "15.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "msw": "^2.7.3",
+    "playwright": "^1.50.1",
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2"
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
