--- a/nextjs-dashboard/vercel.json
+++ b/nextjs-dashboard/vercel.json
@@ -3,5 +3,10 @@
   "devCommand": "pnpm dev",
   "installCommand": "pnpm install",
   "framework": "nextjs",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "git": {
+    "deploymentEnabled": {
+      "production": true
+    }
+  }
 }
