--- a/nextjs-dashboard/.eslintrc.json
+++ b/nextjs-dashboard/.eslintrc.json
@@ -3,11 +3,14 @@
     "next/core-web-vitals",
     "next/typescript"
   ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-require-imports": "warn",
     "react-hooks/exhaustive-deps": "warn",
-    "react/no-unescaped-entities": "warn"
+    "react/no-unescaped-entities": "warn",
+    "@next/next/no-img-element": "warn"
   }
 }
